# src/Mimo.Api.Sdk/Generated/Models/SurveyResponse.cs
@@ -1,0 +1,81 @@
+// <auto-generated/>
+#pragma warning disable CS0618
+using Microsoft.Kiota.Abstractions.Extensions;
+using Microsoft.Kiota.Abstractions.Serialization;
+using System.Collections.Generic;
+using System.IO;
+using System;
+namespace Mimo.Api.Sdk.Models
+{
+    [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
+    #pragma warning disable CS1591
+    public partial class SurveyResponse : IAdditionalDataHolder, IParsable
+    #pragma warning restore CS1591
+    {
+        /// <summary>Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.</summary>
+        public IDictionary<string, object> AdditionalData { get; set; }
+        /// <summary>The id property</summary>
+        public Guid? Id { get; set; }
+        /// <summary>The observations property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Observations { get; set; }
+#nullable restore
+#else
+        public string Observations { get; set; }
+#endif
+        /// <summary>The rating property</summary>
+        public int? Rating { get; set; }
+        /// <summary>The recordedAt property</summary>
+        public DateTimeOffset? RecordedAt { get; set; }
+        /// <summary>The ticketId property</summary>
+        public Guid? TicketId { get; set; }
+        /// <summary>
+        /// Instantiates a new <see cref="global::Mimo.Api.Sdk.Models.SurveyResponse"/> and sets the default values.
+        /// </summary>
+        public SurveyResponse()
+        {
+            AdditionalData = new Dictionary<string, object>();
+        }
+        /// <summary>
+        /// Creates a new instance of the appropriate class based on discriminator value
+        /// </summary>
+        /// <returns>A <see cref="global::Mimo.Api.Sdk.Models.SurveyResponse"/></returns>
+        /// <param name="parseNode">The parse node to use to read the discriminator value and create the object</param>
+        public static global::Mimo.Api.Sdk.Models.SurveyResponse CreateFromDiscriminatorValue(IParseNode parseNode)
+        {
+            if(ReferenceEquals(parseNode, null)) throw new ArgumentNullException(nameof(parseNode));
+            return new global::Mimo.Api.Sdk.Models.SurveyResponse();
+        }
+        /// <summary>
+        /// The deserialization information for the current model
+        /// </summary>
+        /// <returns>A IDictionary&lt;string, Action&lt;IParseNode&gt;&gt;</returns>
+        public virtual IDictionary<string, Action<IParseNode>> GetFieldDeserializers()
+        {
+            return new Dictionary<string, Action<IParseNode>>
+            {
+                { "id", n => { Id = n.GetGuidValue(); } },
+                { "observations", n => { Observations = n.GetStringValue(); } },
+                { "rating", n => { Rating = n.GetIntValue(); } },
+                { "recordedAt", n => { RecordedAt = n.GetDateTimeOffsetValue(); } },
+                { "ticketId", n => { TicketId = n.GetGuidValue(); } },
+            };
+        }
+        /// <summary>
+        /// Serializes information the current object
+        /// </summary>
+        /// <param name="writer">Serialization writer to use to serialize this model</param>
+        public virtual void Serialize(ISerializationWriter writer)
+        {
+            if(ReferenceEquals(writer, null)) throw new ArgumentNullException(nameof(writer));
+            writer.WriteGuidValue("id", Id);
+            writer.WriteStringValue("observations", Observations);
+            writer.WriteIntValue("rating", Rating);
+            writer.WriteDateTimeOffsetValue("recordedAt", RecordedAt);
+            writer.WriteGuidValue("ticketId", TicketId);
+            writer.WriteAdditionalData(AdditionalData);
+        }
+    }
+}
+#pragma warning restore CS0618
